Cambio en la ruta de estilos.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         <img src="/img/mensaje.gif" alt="Animación" class="gif">
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
