Se modificó la ruta de archivos gráficos.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="encabezado">
         <div class="video-container">
         <video autoplay muted loop>
-            <source src="/videos/13495-248644905_medium.mp4" type="video/mp4">
+            <source src="./videos/13495-248644905_medium.mp4" type="video/mp4">
             Tu navegador no admite video HTML5.
         </video>
         </div>
@@ -56,7 +56,7 @@
                     proucto y su eslogan desde cero, en este caso mi elección fue la de un Antivirus.
                 </p>
                 <div class="row">
-                    <img src="/img/CerberScan_duodynamics.jpg" class="imagen" alt="CerberScan">
+                    <img src="./img/CerberScan_duodynamics.jpg" class="imagen" alt="CerberScan">
                 </div>
             </div>
             <div class="proyecto">
@@ -65,7 +65,7 @@
                     No fui seleccionado :(, pero me adentré más en el diseño.
                 </p>
                 <div class="row">
-                    <img src="/img/diseño_hey_jrth_interestelar.png" class="imagen" alt="Tarjeta Interestelar">
+                    <img src="./img/diseño_hey_jrth_interestelar.png" class="imagen" alt="Tarjeta Interestelar">
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
 
     <!-- GIF animado -->
     <div class="gif-container">
-        <img src="/img/mensaje.gif" alt="Animación" class="gif">
+        <img src="./img/mensaje.gif" alt="Animación" class="gif">
     </div>
 
     <script src="./js/script.js"></script>
