Modificaciones de la animación del cursor y el texto.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="container">
         </br>
+        </br>
             <h1 id="typing-text">Hola Mundo, mi nombre es Joshua Torres, Web Developer </h1>
             <nav>
                 <ul>
@@ -33,7 +34,7 @@
     <section id="sobre-mi" class="bg-dark">
         <div class="container">
             <h2 style="text-align: center;">Sobre Mí</h2>
-            <p style="text-align: center;">Gusto por la Innovación Tecnológica y el Desarrollo de Software | Ingeniero Informático con Experiencia en Proyectos de Software | Comprometido con el Aprendizaje Continuo y la Excelencia Profesional</p>
+            <p style="text-align: center;">Gusto por la Innovación Tecnológica y el Desarrollo de Software | Ingeniero en Sistemas con Experiencia en Proyectos de Software | Comprometido con el Aprendizaje Continuo y la Excelencia Profesional</p>
         </div>
     </section>
     <section id="proyectos" class="bg-light">
