Se corrigió el ancho de la sección de contacto y se agregó seccion de iconos de tecnologías.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
             </br>
                 <a href="https://gn3nomina.com/">Ver Proyecto</a>
             </div>
+            <div class="grid-container">
+                <div class="grid-item"><i class="fab fa-windows"></i><span>ASP.NET</span></div>
+                <div class="grid-item"><i class="fab fa-windows"></i><span>Visual Basic</span></div>
+                <div class="grid-item"><i class="fas fa-database"></i><span>SQL Server</span></div>
+                <div class="grid-item"><i class="fab fa-html5"></i><span>HTML</span></div>
+                <div class="grid-item"><i class="fab fa-css3-alt"></i><span>CSS</span></div>
+                <div class="grid-item"><i class="fab fa-js"></i><span>JavaScript</span></div>
+            </div>            
             <div class="proyecto">
                 <h3>CerberScan</h3>
                 <p>Durante mi formación académica llevé a cabo un proyecto para la creación de una empresa con el que
@@ -72,7 +80,7 @@
         </div>
     </section>
     <section id="contacto" class="bg-dark">
-        <div class="container">
+        <div class="contact-section" style="text-align: center;">
             <h2>Contacto:</h2>
             <p class="llamativo">¿Te gustaría que trabajemos juntos?</p>
             <section class="contact-info">
@@ -100,7 +108,9 @@
 
     <!-- GIF animado -->
     <div class="gif-container">
-        <img src="./img/mensaje.gif" alt="Animación" class="gif">
+        <a href="mailto:josh_e24@hotmail.com">
+            <img src="./img/mensaje.gif" alt="Animación" class="gif">
+        </a>        
     </div>
 
     <script src="./js/script.js"></script>
