Se modificaron estilos y se agrega animación para los elemntos de la clase container.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Tu navegador no admite video HTML5.
         </video>
         </div>
-        <div class="container">
+        <div class="intro">
         </br>
         </br>
             <h1 id="typing-text">Hola Mundo, mi nombre es Joshua Torres, Web Developer </h1>
@@ -81,8 +81,8 @@
     </section>
     <section id="contacto" class="bg-dark">
         <div class="contact-section" style="text-align: center;">
-            <h2>Contacto:</h2>
-            <p class="llamativo">¿Te gustaría que trabajemos juntos?</p>
+            <h2>Contáctame:</h2>
+            <p class="llamativo">_______________________________</p>
             <section class="contact-info">
                 <a><i class="fas fa-phone fa-3x"></i><span class="contact-text">+56 14065353</span></a>
                 <a><i class="fas fa-envelope fa-3x"></i><span class="contact-text">josh_e24@hotmail.com</span></a>
