--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             <h2 style="color:black">Proyectos</h2>
             <div class="proyecto">
                 <h3>GN3 Nómina</h3>
-                <p>En cuanto a experiencia professional mi primer empleo como Desarrollador Web Jr 
+                <p>En cuanto a experiencia profesional mi primer empleo como Desarrollador Web Jr 
                     fue en GN3 Software, donde adquirí conocimientos en tecnologías como ASP.NET Framework,
                     Visual Basic, SQL Server, HTML, CSS y JS. Presté mis servicios en el desarrollo, pruebas
                     y mantenimiento de la aplicación GN3 Nómina.
                 </p>
             </br>
-                <a href="https://gn3nomina.com/">Ver Proyecto</a>
+                <a href="https://gn3nomina.com/" target="_blank">Ver Proyecto</a>
             </div>
             <div class="grid-container">
                 <div class="grid-item"><i class="fab fa-windows"></i><span>ASP.NET</span></div>
@@ -86,7 +86,7 @@
             <section class="contact-info">
                 <a><i class="fas fa-phone fa-3x"></i><span class="contact-text">+56 14065353</span></a>
                 <a><i class="fas fa-envelope fa-3x"></i><span class="contact-text">josh_e24@hotmail.com</span></a>
-                <a href="https://www.linkedin.com/in/joshua-torres-89296a2b3/"><i class="fab fa-linkedin fa-4x"></i></a>
+                <a href="https://www.linkedin.com/in/joshua-torres-89296a2b3/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a>
                 <a href="https://github.com/JozhTorres/portfolio" target="_blank"><i class="fab fa-github fa-4x"></i></a>                  
             </section>
             <!-- <form action="#" method="post">
